<resources>
    <string name="app_name">Calcular el %</string>
    <string name="tv1">Calcular el %</string>
    <string name="et1">Ingresar el valor</string>
    <string name="tv2">Ingresar el valor que desea calcular...</string>
    <string name="btn1">5%</string>
    <string name="btn2">10%</string>
    <string name="btn3">15%</string>
    <string name="btn4">20%</string>
    <string name="btn5">25%</string>
    <string name="btn6">30%</string>
    <string name="btn7">40%</string>
    <string name="btn8">50%</string>
    <string name="banner_ad_unit_id">ca-app-pub-3517612946554837/1860727452</string>
    <string name="text_btn_close_app">Salir</string>
    <string name="todo">TODO</string>
    <string name="text_close_app">Presionar nuevamente para salir...</string>
    <string name="text_empty_field">Por favor ingresar un valor</string>

</resources>