<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/tv1"
            android:textSize="36sp"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            ads:layout_constraintBottom_toBottomOf="@+id/tv1"
            ads:layout_constraintStart_toEndOf="@+id/tv1"
            ads:layout_constraintTop_toTopOf="@+id/tv1" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:ems="10"
            android:hint="@string/et1"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/tv1" />

        <!--Content result of percentage-->
        <LinearLayout
            android:id="@+id/ll_content_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/et1">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:numeric="decimal"
                android:textSize="15sp"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/et1" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:textSize="15sp"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/tv2" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:textSize="15sp"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/tv3" />
        </LinearLayout>

        <!--Content all options of percentage-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintTop_toBottomOf="@+id/ll_content_result"
            ads:layout_constraintBottom_toTopOf="@+id/ll_content_bottom_data">

            <!--SECOND ROW options of percentage-->
            <LinearLayout
                android:id="@+id/ll_content_first_row_of_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:weightSum="8"
                ads:layout_constraintTop_toTopOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/material_button"
                    android:gravity="center"
                    android:onClick="btn_5"
                    android:text="@string/btn1"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/material_button"
                    android:gravity="center"
                    android:onClick="btn_10"
                    android:text="@string/btn2"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/material_button"
                    android:gravity="center"
                    android:onClick="btn_15"
                    android:text="@string/btn3"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/material_button"
                    android:gravity="center"
                    android:onClick="btn_20"
                    android:text="@string/btn4"
                    android:textSize="20sp" />
            </LinearLayout>

            <!--SECOND ROW options of percentage-->
            <LinearLayout
                android:id="@+id/ll_content_second_row_of_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:weightSum="8"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/ll_content_first_row_of_percentage">

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/material_button"
                    android:gravity="center"
                    android:onClick="btn_25"
                    android:text="@string/btn5"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/material_button"
                    android:gravity="center"
                    android:onClick="btn_30"
                    android:text="@string/btn6"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/material_button"
                    android:gravity="center"
                    android:onClick="btn_40"
                    android:text="@string/btn7"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/material_button"
                    android:gravity="center"
                    android:onClick="btn_50"
                    android:text="@string/btn8"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--Content btn + adb google-->
        <LinearLayout
            android:id="@+id/ll_content_bottom_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:background="@drawable/material_btnsalir"
                android:onClick="btnBack"
                android:text="@string/text_btn_close_app"
                android:textColor="@color/md_black_1000"
                android:textSize="14sp" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"
                ads:layout_constraintBottom_toBottomOf="parent"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
